Satuk/output/SatukParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:/Users/Msi/RiderProjects/Satuk/Satuk/Satuk.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class SatukParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, LPAREN=16, 
		RPAREN=17, LBRACE=18, RBRACE=19, LBRACK=20, RBRACK=21, SEMICOLON=22, COMMA=23, 
		DOT=24, ASSIGN=25, GT=26, LT=27, NOT=28, QUESTION=29, EQUAL=30, LE=31, 
		GE=32, NOTEQUAL=33, AND=34, OR=35, INC=36, DEC=37, ADD=38, SUB=39, MUL=40, 
		DIV=41, MOD=42, ADD_ASSIGN=43, SUB_ASSIGN=44, MUL_ASSIGN=45, DIV_ASSIGN=46, 
		WS=47, INT=48, STRING=49, BOOL=50, FLOAT=51, CHAR=52, VARIABLE=53;
	public const int
		RULE_program = 0, RULE_prog = 1, RULE_print = 2, RULE_assignment = 3, 
		RULE_assign_bool = 4, RULE_assign_bool_logical = 5, RULE_assign_bool_dynamic = 6, 
		RULE_assign_string = 7, RULE_assign_string_dynamic = 8, RULE_assign_char = 9, 
		RULE_assign_char_dynamic = 10, RULE_assign_int_constant = 11, RULE_assign_int_ar = 12, 
		RULE_assign_int_dynamic = 13, RULE_assign_float_constant = 14, RULE_assign_float_dynamic = 15, 
		RULE_assign_float_ar = 16, RULE_assignment_class = 17, RULE_assignment_function = 18, 
		RULE_arithmetics = 19, RULE_arithmetics_int = 20, RULE_arithmetics_float = 21, 
		RULE_mutators = 22, RULE_int_inc = 23, RULE_float_inc = 24, RULE_int_dec = 25, 
		RULE_float_dec = 26, RULE_variable_inc = 27, RULE_variable_dec = 28, RULE_logical_instructions = 29, 
		RULE_logical_bool = 30, RULE_logical_numeric = 31, RULE_logical_text = 32, 
		RULE_logical_var = 33, RULE_if_statement = 34, RULE_loop = 35, RULE_print_content = 36, 
		RULE_functions = 37, RULE_function = 38, RULE_constructor = 39, RULE_return = 40, 
		RULE_class = 41, RULE_execute_function = 42, RULE_void_function = 43, 
		RULE_int_function = 44, RULE_float_function = 45, RULE_string_function = 46, 
		RULE_char_function = 47, RULE_bool_function = 48, RULE_variable_function = 49, 
		RULE_void_return = 50, RULE_int_return = 51, RULE_float_return = 52, RULE_string_return = 53, 
		RULE_char_return = 54, RULE_bool_return = 55, RULE_variable_return = 56;
	public static readonly string[] ruleNames = {
		"program", "prog", "print", "assignment", "assign_bool", "assign_bool_logical", 
		"assign_bool_dynamic", "assign_string", "assign_string_dynamic", "assign_char", 
		"assign_char_dynamic", "assign_int_constant", "assign_int_ar", "assign_int_dynamic", 
		"assign_float_constant", "assign_float_dynamic", "assign_float_ar", "assignment_class", 
		"assignment_function", "arithmetics", "arithmetics_int", "arithmetics_float", 
		"mutators", "int_inc", "float_inc", "int_dec", "float_dec", "variable_inc", 
		"variable_dec", "logical_instructions", "logical_bool", "logical_numeric", 
		"logical_text", "logical_var", "if_statement", "loop", "print_content", 
		"functions", "function", "constructor", "return", "class", "execute_function", 
		"void_function", "int_function", "float_function", "string_function", 
		"char_function", "bool_function", "variable_function", "void_return", 
		"int_return", "float_return", "string_return", "char_return", "bool_return", 
		"variable_return"
	};

	private static readonly string[] _LiteralNames = {
		null, "'program'", "'display'", "'bool'", "'string'", "'char'", "'int'", 
		"'float'", "'new'", "'if'", "'else if'", "'else'", "'loop'", "'class'", 
		"'void'", "'return'", "'('", "')'", "'{'", "'}'", "'['", "']'", "';'", 
		"','", "'.'", "'='", "'>'", "'<'", "'!'", "'?'", "'=='", "'<='", "'>='", 
		null, "'&&'", "'||'", "'++'", "'--'", "'+'", "'-'", "'*'", "'/'", "'%'", 
		"'+='", "'-='", "'*='", "'/='"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACK", 
		"RBRACK", "SEMICOLON", "COMMA", "DOT", "ASSIGN", "GT", "LT", "NOT", "QUESTION", 
		"EQUAL", "LE", "GE", "NOTEQUAL", "AND", "OR", "INC", "DEC", "ADD", "SUB", 
		"MUL", "DIV", "MOD", "ADD_ASSIGN", "SUB_ASSIGN", "MUL_ASSIGN", "DIV_ASSIGN", 
		"WS", "INT", "STRING", "BOOL", "FLOAT", "CHAR", "VARIABLE"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Satuk.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static SatukParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public SatukParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public SatukParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LBRACE() { return GetToken(SatukParser.LBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ProgContext prog() {
			return GetRuleContext<ProgContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ReturnContext @return() {
			return GetRuleContext<ReturnContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RBRACE() { return GetToken(SatukParser.RBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ClassContext[] @class() {
			return GetRuleContexts<ClassContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ClassContext @class(int i) {
			return GetRuleContext<ClassContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FunctionsContext[] functions() {
			return GetRuleContexts<FunctionsContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public FunctionsContext functions(int i) {
			return GetRuleContext<FunctionsContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISatukListener typedListener = listener as ISatukListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISatukListener typedListener = listener as ISatukListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISatukVisitor<TResult> typedVisitor = visitor as ISatukVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 117;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__12) {
				{
				{
				State = 114;
				@class();
				}
				}
				State = 119;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 123;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 9007199254757624L) != 0)) {
				{
				{
				State = 120;
				functions();
				}
				}
				State = 125;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 126;
			Match(T__0);
			State = 127;
			Match(LBRACE);
			State = 128;
			prog();
			State = 129;
			@return();
			State = 130;
			Match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ProgContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public AssignmentContext[] assignment() {
			return GetRuleContexts<AssignmentContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public AssignmentContext assignment(int i) {
			return GetRuleContext<AssignmentContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public If_statementContext[] if_statement() {
			return GetRuleContexts<If_statementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public If_statementContext if_statement(int i) {
			return GetRuleContext<If_statementContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public LoopContext[] loop() {
			return GetRuleContexts<LoopContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public LoopContext loop(int i) {
			return GetRuleContext<LoopContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PrintContext[] print() {
			return GetRuleContexts<PrintContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public PrintContext print(int i) {
			return GetRuleContext<PrintContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Execute_functionContext[] execute_function() {
			return GetRuleContexts<Execute_functionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Execute_functionContext execute_function(int i) {
			return GetRuleContext<Execute_functionContext>(i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_prog; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISatukListener typedListener = listener as ISatukListener;
			if (typedListener != null) typedListener.EnterProg(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISatukListener typedListener = listener as ISatukListener;
			if (typedListener != null) typedListener.ExitProg(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISatukVisitor<TResult> typedVisitor = visitor as ISatukVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProg(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgContext prog() {
		ProgContext _localctx = new ProgContext(Context, State);
		EnterRule(_localctx, 2, RULE_prog);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 139;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 9007199254745852L) != 0)) {
				{
				State = 137;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
				case 1:
					{
					State = 132;
					assignment();
					}
					break;
				case 2:
					{
					State = 133;
					if_statement();
					}
					break;
				case 3:
					{
					State = 134;
					loop();
					}
					break;
				case 4:
					{
					State = 135;
					print();
					}
					break;
				case 5:
					{
					State = 136;
					execute_function();
					}
					break;
				}
				}
				State = 141;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PrintContext : ParserRuleContext {
		public PrintContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_print; } }
	 
		public PrintContext() { }
		public virtual void CopyFrom(PrintContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class DisplayContext : PrintContext {
		public Print_contentContext result;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAREN() { return GetToken(SatukParser.LPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAREN() { return GetToken(SatukParser.RPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMICOLON() { return GetToken(SatukParser.SEMICOLON, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Print_contentContext print_content() {
			return GetRuleContext<Print_contentContext>(0);
		}
		public DisplayContext(PrintContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISatukListener typedListener = listener as ISatukListener;
			if (typedListener != null) typedListener.EnterDisplay(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISatukListener typedListener = listener as ISatukListener;
			if (typedListener != null) typedListener.ExitDisplay(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISatukVisitor<TResult> typedVisitor = visitor as ISatukVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDisplay(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PrintContext print() {
		PrintContext _localctx = new PrintContext(Context, State);
		EnterRule(_localctx, 4, RULE_print);
		try {
			_localctx = new DisplayContext(_localctx);
			EnterOuterAlt(_localctx, 1);
			{
			State = 142;
			Match(T__1);
			State = 143;
			Match(LPAREN);
			State = 144;
			((DisplayContext)_localctx).result = print_content();
			State = 145;
			Match(RPAREN);
			State = 146;
			Match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AssignmentContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMICOLON() { return GetToken(SatukParser.SEMICOLON, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Assign_charContext assign_char() {
			return GetRuleContext<Assign_charContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Assign_stringContext assign_string() {
			return GetRuleContext<Assign_stringContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Assign_float_constantContext assign_float_constant() {
			return GetRuleContext<Assign_float_constantContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Assign_boolContext assign_bool() {
			return GetRuleContext<Assign_boolContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Assign_int_arContext assign_int_ar() {
			return GetRuleContext<Assign_int_arContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Assign_int_constantContext assign_int_constant() {
			return GetRuleContext<Assign_int_constantContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Assign_float_arContext assign_float_ar() {
			return GetRuleContext<Assign_float_arContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Assign_bool_logicalContext assign_bool_logical() {
			return GetRuleContext<Assign_bool_logicalContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Assignment_classContext assignment_class() {
			return GetRuleContext<Assignment_classContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Assign_bool_dynamicContext assign_bool_dynamic() {
			return GetRuleContext<Assign_bool_dynamicContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Assign_char_dynamicContext assign_char_dynamic() {
			return GetRuleContext<Assign_char_dynamicContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Assign_float_dynamicContext assign_float_dynamic() {
			return GetRuleContext<Assign_float_dynamicContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Assign_int_dynamicContext assign_int_dynamic() {
			return GetRuleContext<Assign_int_dynamicContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Assign_string_dynamicContext assign_string_dynamic() {
			return GetRuleContext<Assign_string_dynamicContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Assignment_functionContext assignment_function() {
			return GetRuleContext<Assignment_functionContext>(0);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_assignment; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISatukListener typedListener = listener as ISatukListener;
			if (typedListener != null) typedListener.EnterAssignment(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISatukListener typedListener = listener as ISatukListener;
			if (typedListener != null) typedListener.ExitAssignment(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISatukVisitor<TResult> typedVisitor = visitor as ISatukVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAssignment(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AssignmentContext assignment() {
		AssignmentContext _localctx = new AssignmentContext(Context, State);
		EnterRule(_localctx, 6, RULE_assignment);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 163;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				{
				State = 148;
				assign_char();
				}
				break;
			case 2:
				{
				State = 149;
				assign_string();
				}
				break;
			case 3:
				{
				State = 150;
				assign_float_constant();
				}
				break;
			case 4:
				{
				State = 151;
				assign_bool();
				}
				break;
			case 5:
				{
				State = 152;
				assign_int_ar();
				}
				break;
			case 6:
				{
				State = 153;
				assign_int_constant();
				}
				break;
			case 7:
				{
				State = 154;
				assign_float_ar();
				}
				break;
			case 8:
				{
				State = 155;
				assign_bool_logical();
				}
				break;
			case 9:
				{
				State = 156;
				assignment_class();
				}
				break;
			case 10:
				{
				State = 157;
				assign_bool_dynamic();
				}
				break;
			case 11:
				{
				State = 158;
				assign_char_dynamic();
				}
				break;
			case 12:
				{
				State = 159;
				assign_float_dynamic();
				}
				break;
			case 13:
				{
				State = 160;
				assign_int_dynamic();
				}
				break;
			case 14:
				{
				State = 161;
				assign_string_dynamic();
				}
				break;
			case 15:
				{
				State = 162;
				assignment_function();
				}
				break;
			}
			State = 165;
			Match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Assign_boolContext : ParserRuleContext {
		public Assign_boolContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_assign_bool; } }
	 
		public Assign_boolContext() { }
		public virtual void CopyFrom(Assign_boolContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class BoolAssContext : Assign_boolContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode VARIABLE() { return GetToken(SatukParser.VARIABLE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ASSIGN() { return GetToken(SatukParser.ASSIGN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BOOL() { return GetToken(SatukParser.BOOL, 0); }
		public BoolAssContext(Assign_boolContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISatukListener typedListener = listener as ISatukListener;
			if (typedListener != null) typedListener.EnterBoolAss(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISatukListener typedListener = listener as ISatukListener;
			if (typedListener != null) typedListener.ExitBoolAss(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISatukVisitor<TResult> typedVisitor = visitor as ISatukVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBoolAss(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Assign_boolContext assign_bool() {
		Assign_boolContext _localctx = new Assign_boolContext(Context, State);
		EnterRule(_localctx, 8, RULE_assign_bool);
		int _la;
		try {
			_localctx = new BoolAssContext(_localctx);
			EnterOuterAlt(_localctx, 1);
			{
			State = 167;
			Match(T__2);
			State = 168;
			Match(VARIABLE);
			State = 171;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==ASSIGN) {
				{
				State = 169;
				Match(ASSIGN);
				State = 170;
				Match(BOOL);
				}
			}
